--- a/robot-tower-defence-2/pyproject.toml
+++ b/robot-tower-defence-2/pyproject.toml
@@ -8,6 +8,8 @@ packages = [{include = "robot_tower_defence_2"}]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+pygame = "^2.3.0"
+pytmx = "^3.31"
 
 
 [tool.poetry.group.dev.dependencies]
