--- a/robot-tower-defence-2/pyproject.toml
+++ b/robot-tower-defence-2/pyproject.toml
@@ -10,10 +10,12 @@ packages = [{include = "robot_tower_defence_2"}]
 python = "^3.8"
 pygame = "^2.3.0"
 pytmx = "^3.31"
+invoke = "^2.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.17.1"
+autopep8 = "^2.0.2"
 
 [build-system]
 requires = ["poetry-core"]
