--- a/robot-tower-defence-2/pyproject.toml
+++ b/robot-tower-defence-2/pyproject.toml
@@ -16,7 +16,10 @@ invoke = "^2.0.0"
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.17.1"
 autopep8 = "^2.0.2"
+pytest = "^7.2.2"
+coverage = "^7.2.2"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
