--- a/robot-tower-defence-2/pyproject.toml
+++ b/robot-tower-defence-2/pyproject.toml
@@ -20,6 +20,6 @@ pytest = "^7.2.2"
 coverage = "^7.2.2"
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=1.4.0"]
 build-backend = "poetry.core.masonry.api"
 
