--- a/robot-tower-defence-2/pyproject.toml
+++ b/robot-tower-defence-2/pyproject.toml
@@ -13,7 +13,7 @@ pytmx = "^3.31"
 invoke = "^2.0.0"
 
 
-[tool.poetry.group.dev.dependencies]
+[tool.poetry.dev-dependencies]
 pylint = "^2.17.1"
 autopep8 = "^2.0.2"
 pytest = "^7.2.2"
