--- a/robot-tower-defence-2/pyproject.toml
+++ b/robot-tower-defence-2/pyproject.toml
@@ -13,13 +13,13 @@ pytmx = "^3.31"
 invoke = "^2.0.0"
 
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pylint = "^2.17.1"
 autopep8 = "^2.0.2"
 pytest = "^7.2.2"
 coverage = "^7.2.2"
 
 [build-system]
-requires = ["poetry-core>=1.4.0"]
+requires = ["poetry-core>=1.2.0"]
 build-backend = "poetry.core.masonry.api"
 
