--- a/robot-tower-defence-2/.coveragerc
+++ b/robot-tower-defence-2/.coveragerc
@@ -1,3 +1,3 @@
 [run]
 source = src
-omit = src/**/__init__.py,src/tests/**
+omit = src/**/__init__.py,src/tests/**,src/game/ui.py,src/game/ui_components/**
