--- a/robot-tower-defence-2/pyproject.toml
+++ b/robot-tower-defence-2/pyproject.toml
@@ -12,6 +12,14 @@ pytmx = "^3.31"
 invoke = "^2.0.0"
 python-dotenv = "^1.0.0"
 
+[tool.pytest.ini_options]
+env_files = [
+    ".env.test",
+]
+filterwarnings = [
+    'ignore::DeprecationWarning',
+]
+
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.17.1"
@@ -19,6 +27,7 @@ autopep8 = "^2.0.2"
 pytest = "^7.2.2"
 coverage = "^7.2.2"
 pyinstaller = "^5.10.1"
+pytest-dotenv = "^0.5.2"
 
 [tool.autopep8]
 max_line_length = 100
